third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-nightly/transmute-mut-const.stderr
warning: taking a mutable reference to a `const` item
  --> tests/ui-nightly/transmute-mut-const.rs:20:52
   |
20 | const CONST_CONTEXT: &mut [u8; 2] = transmute_mut!(&mut ARRAY_OF_U8S);
   |                                                    ^^^^^^^^^^^^^^^^^
   |
   = note: each usage of a `const` item creates a new temporary
   = note: the mutable reference will refer to this temporary, not the original `const` item
note: `const` item defined here
  --> tests/ui-nightly/transmute-mut-const.rs:17:1
   |
17 | const ARRAY_OF_U8S: [u8; 2] = [0u8; 2];
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: `#[warn(const_item_mutation)]` on by default

error[E0015]: cannot call non-const function `transmute_mut::<'_, '_, [u8; 2], [u8; 2]>` in constants
  --> tests/ui-nightly/transmute-mut-const.rs:20:37
   |
20 | const CONST_CONTEXT: &mut [u8; 2] = transmute_mut!(&mut ARRAY_OF_U8S);
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
